--- a/widgets/box/output/style/dBox.css
+++ b/widgets/box/output/style/dBox.css
@@ -16,16 +16,16 @@ html {
 
 .dBox {
 	position:absolute;
-	left: 44.3em;
-	top: 6.8em;
+	left:443px;
+	top:68px;
 
-	margin: 0.0em auto;
+	margin:0px auto;
 	min-width:8em;
-	max-width: 76.0em; /* based on image dimensions - not quite consistent with drip styles yet */
+	max-width:760px; /* based on image dimensions - not quite consistent with drip styles yet */
 	z-index:1;
-	margin-left: 1.2em; /* default, width of left corner */
+	margin-left:12px; /* default, width of left corner */
 	margin-bottom:0.5em; /* spacing under dialog */
-	width: 60.0em
+	width: 600px
 }
 
 .dBox .dBox-content,
@@ -39,18 +39,18 @@ html {
 	 position:relative;
 	 zoom:1;
 	 _overflow-y:hidden;
-	 padding: 0.0em 1.2em 0.0em 0.0em;
+	 padding:0px 12px 0px 0px;
 }
 
 .dBox .dBox-top {
 	 /* top+left vertical slice */
 	 position:absolute;
-	 left: 0.0em;
-	 top: 0.0em;
-	 width: 1.2em; /* top slice width */
-	 margin-left: -1.2em;
+	 left:0px;
+	 top:0px;
+	 width:12px; /* top slice width */
+	 margin-left:-12px;
 	 height:100%;
-	 _height: 160.0em; /* arbitrary long height, IE 6 */
+	 _height:1600px; /* arbitrary long height, IE 6 */
 	 background-position:left top;
 }
 
@@ -62,8 +62,8 @@ html {
 
 .dBox .dBox-bottom,
 .dBox .dBox-bottom div {
-	 height: 3.0em; /* height of bottom cap/shade */
-	 font-size: 0.1em;
+	 height:30px; /* height of bottom cap/shade */
+	 font-size:1px;
 }
 
 .dBox .dBox-bottom {
@@ -72,19 +72,19 @@ html {
 
 .dBox .dBox-bottom div {
 	 position:relative;
-	 width: 8.0em; /* bottom corner width */
-	 margin-left: -1.2em;
+	 width:80px; /* bottom corner width */
+	 margin-left:-12px;
 	 background-position: left bottom;
 }
 
 .dBox h1,
 div.dBox div.dBox-content p {
-	margin: 0.0em; /* margins will blow out backgrounds, leaving whitespace. */
-	padding:0.5em 0.0em 0.5em 0.0em;
+	margin:0px; /* margins will blow out backgrounds, leaving whitespace. */
+	padding:0.5em 0px 0.5em 0px;
 }
 
 .dBox h1 {
-	padding-bottom: 0.0em;
+	padding-bottom:0px;
 }
 
 /*]]>*/
