--- a/widgets/box/output/style/fwBox.css
+++ b/widgets/box/output/style/fwBox.css
@@ -7,15 +7,15 @@
  */
 
 .fwBox {
-	width: 26.4em;
+	width: 264px;
 	background: URL("fwBox/fwBox.png") no-repeat left bottom;
-	margin: 1.5em auto;	/* just for center */
-	padding-bottom: 0.1em;
+	margin: 15px auto;	/* just for center */
+	padding-bottom: 1px;
 }
 .fwBox-inner {
 	background: URL("fwBox/fwBox.png") no-repeat left top;
-	padding: 1.5em 2.0em 0;
-	margin-bottom: 0.9em;
+	padding: 15px 20px 0;
+	margin-bottom: 9px;
 }
 
 /*]]>*/
