--- a/widgets/box/output/style/mBox_glow.css
+++ b/widgets/box/output/style/mBox_glow.css
@@ -16,26 +16,26 @@
 
 .mBox {
 	float:left;
-    padding-right: 1.5em;       /* the gap on the right edge of the image (not content padding) */
+    padding-right: 15px;       /* the gap on the right edge of the image (not content padding) */
 }
 
 /* set the top-right image */
 .mBox .mBox-head {
     background-position: right top;
-    margin-right: -1.5em;       /* pull the right image over on top of border */
-    padding-right: 1.5em;       /* right-image-gap + right-inside padding */
+    margin-right: -15px;       /* pull the right image over on top of border */
+    padding-right: 15px;       /* right-image-gap + right-inside padding */
 }
 
 /* set the top-left image */
 .mBox .mBox-head h2 {
     background-position: left top;
-    padding-top: 1.4em;
+    padding-top: 14px;
 }
 
 /* set the lower-left corner image */
 .mBox .mBox-body {
     background-position: left bottom;
-    padding: 0 0 1.5em 1.5em; 
+    padding: 0 0 15px 15px; 
 }
 
 .mBox .mBox-body img{
