--- a/widgets/form/output/style/sRate.css
+++ b/widgets/form/output/style/sRate.css
@@ -1,19 +1,19 @@
 
 
 /*STARS */
-.sRate { list-style:none; margin: -0.1em 0 0 -0.1em; padding:0; width: 7.0em; height: 1.2em; position:relative; background:url(sRate/sRate.gif) 0 0 repeat-x; overflow:hidden;}
+.sRate { list-style:none; margin:-1px 0 0 -1px; padding:0; width:70px; height:12px; position:relative; background:url(sRate/sRate.gif) 0 0 repeat-x; overflow:hidden;}
 	.sRate li { padding:0; margin:0; float:left;}
-	.sRate li a { display:block; width: 1.4em; height: 1.2em; text-decoration:none; text-indent: -900.0em; z-index:20; position:absolute; padding:0; margin:0;}
-	.sRate li a:hover{ background:url(sRate/sRate.gif) 0 1.2em; z-index:2; left:0;}
+	.sRate li a { display:block; width:14px; height:12px; text-decoration:none; text-indent:-9000px; z-index:20; position:absolute; padding:0; margin:0;}
+	.sRate li a:hover{ background:url(sRate/sRate.gif) 0 12px; z-index:2; left:0;}
 		.sRate a.one_star{ left:0;}
-		.sRate a.one_star:hover{ width: 1.4em;}
-		.sRate a.two_stars{ left: 1.4em;}
-		.sRate a.two_stars:hover{ width: 2.8em;}
-		.sRate a.three_stars{ left: 2.8em;}
-		.sRate a.three_stars:hover{ width: 4.2em;}
-		.sRate a.four_stars{ left: 4.2em;}	
-		.sRate a.four_stars:hover{ width: 5.6em;}
-		.sRate a.five_stars{ left: 5.6em;}
-		.sRate a.five_stars:hover{ width: 7.0em;}
-	.sRate li.current_rating{ background:url(sRate/sRate.gif) 0 2.4em; position:absolute; height: 1.2em; display:block; text-indent: -900.0em; z-index:1; left:0;}
+		.sRate a.one_star:hover{ width:14px;}
+		.sRate a.two_stars{ left:14px;}
+		.sRate a.two_stars:hover{ width:28px;}
+		.sRate a.three_stars{ left:28px;}
+		.sRate a.three_stars:hover{ width:42px;}
+		.sRate a.four_stars{ left:42px;}	
+		.sRate a.four_stars:hover{ width:56px;}
+		.sRate a.five_stars{ left:56px;}
+		.sRate a.five_stars:hover{ width:70px;}
+	.sRate li.current_rating{ background:url(sRate/sRate.gif) 0 24px; position:absolute; height:12px; display:block; text-indent:-9000px; z-index:1; left:0;}
 	
