--- a/widgets/image/output/style/gallery_inline-block.css
+++ b/widgets/image/output/style/gallery_inline-block.css
@@ -5,8 +5,8 @@
 }
 
 .gallery li {
-	margin: 1.0em;
-	border: 0.1em solid #eee;
+	margin: 10px;
+	border: 1px solid #eee;
 	display: -moz-inline-box;	/* fix firefox2*/
 	display: inline-block;
 	vertical-align:bottom;
@@ -14,7 +14,7 @@
 }
 
 .gallery li:hover {
-	border: 0.1em solid #6AA5DC;
+	border: 1px solid #6AA5DC;
 	background: #E6F1FA;
 }
 
@@ -23,8 +23,8 @@
 }
 
 .gallery .figure {
-	width: 18.0em;
-	padding: 2.0em 0;
+	width:180px;
+	padding:20px 0;
 }
 
 
