--- a/widgets/nav/output/style/hNav.css
+++ b/widgets/nav/output/style/hNav.css
@@ -12,23 +12,23 @@
 #nav li a {
 	float:left;
 	background-position: left top;
-	padding-left: 1.0em;
-	margin-left: 0.5em;
+	padding-left: 10px;
+	margin-left:5px;
 }
 #nav li a span {
 	background-position: right top;
-	padding-right: 1.0em;
+	padding-right:10px;
 	text-align:center;
 	display:block;
-	line-height: 2.5em;
+	line-height:25px;
 }	
 #nav li a:hover, #nav li.nav-current a {
-	background-position: left -9.2em;
+	background-position: left -92px;
 	color:#356aa0;
 }
 #nav li a:hover span, #nav li.nav-current a span{
-	background-position: right -9.2em;
-	text-shadow: 0.1em 0.1em 0.2em #aaa;
+	background-position: right -92px;
+	text-shadow:1px 1px 2px #aaa;
 }
 
 
