--- a/widgets/nav/output/style/hNav2.css
+++ b/widgets/nav/output/style/hNav2.css
@@ -18,34 +18,34 @@ html {
 #nav li a{
 	background-position: left top;
 	float:left;
-	padding-left: 1.0em;
-	margin-left: 0.5em;
-	line-height: 2.5em;
+	padding-left: 10px;
+	margin-left:5px;
+	line-height:25px;
 }
 
 #nav li a span{
 	background-position: right top;
 	color:#AEB9CB;
-	padding-right: 1.0em;
+	padding-right: 10px;
 	display:block;
 	text-decoration:none;
 }
 
 #nav li a:hover {
-	background-position: left -17.8em;
+	background-position: left -178px;
 	color:#181F2C;
 }
 #nav li a:hover span {
-	background-position: right -17.8em;
+	background-position: right -178px;
 	color:#2F3644;
 }
 
 #nav li.nav-current a{
-	background-position: left -9.2em;
+	background-position: left -92px;
 }
 
 #nav li.nav-current a span{
-	background-position: right -9.2em;
+	background-position: right -92px;
 	cursor:default;
 	color:#2F3644;
 }
