--- a/widgets/nav/output/style/jNav.css
+++ b/widgets/nav/output/style/jNav.css
@@ -6,9 +6,9 @@ inspired by coda(http://www.panic.com/coda)
 
 #nav {
 	background: url("jNav/jNav.png") no-repeat left bottom;	
-	width: 80.0em;
-	height: 10.0em;
-	margin: 2.0em auto;
+	width:800px;
+	height:100px;
+	margin: 20px auto;
 }
 
 #nav li{
@@ -20,9 +20,9 @@ inspired by coda(http://www.panic.com/coda)
 #nav li a {
 	float:left;
 	background: url("jNav/jNav.png") no-repeat;	
-	width: 20.0em;
-	height: 0.0em;
-	padding-top: 10.0em;
+	width:200px;
+	height:0px;
+	padding-top:100px;
 	overflow: hidden;
 }
 
@@ -31,15 +31,15 @@ inspired by coda(http://www.panic.com/coda)
 }
 
 #nav li#nav-blog a {
-	background-position: -20.0em 0;
+	background-position:-200px 0;
 }
 
 #nav li#nav-work a {
-	background-position: -40.0em 0;
+	background-position:-400px 0;
 }
 
 #nav li#nav-about a {
-	background-position: -60.0em 0;
+	background-position:-600px 0;
 }
 
 
