--- a/widgets/nav/output/style/sNav2.css
+++ b/widgets/nav/output/style/sNav2.css
@@ -1,27 +1,27 @@
 
 	
 	#nav {
-		width: 20.0em;
+		width:200px;
 	}
 	#nav li {
-		margin: 0.5em 0;
+		margin:5px 0;
 	}
 	#nav li a {
 		background:#F4F4F4;
-		border-left: 0.8em solid #ccc;
+		border-left:8px solid #ccc;
 		display:block;
-		padding-left: 1.2em;
-		height: 2.5em;
-		line-height: 2.5em;
+		padding-left:12px;
+		height:25px;
+		line-height:25px;
 	}
 	#nav li a:hover, #nav li.nav-current a {
 		background:#EAEAEA none repeat scroll 0%;
-		border-left: 1.0em solid #356aa0;
-		padding-left: 1.0em;
+		border-left:10px solid #356aa0;
+		padding-left:10px;
 		color:#356aa0;
-		text-shadow: 0.2em 0.2em 0.4em #aaa;
+		text-shadow:2px 2px 4px #aaa;
 		font-weight: bold;
 	}
 	#nav ul ul {
-		margin-left: 2.0em;
+		margin-left:20px;
 	}
