--- a/widgets/nav/output/style/sTab.css
+++ b/widgets/nav/output/style/sTab.css
@@ -5,9 +5,9 @@
 */
 
 #sNav a, #sNav span {
-	border: 0.1em solid #999;
+	border: 1px solid #999;
 	border-left: none;
-	padding: 0.3em 0.8em;
+	padding: 3px 8px;
 }
 #sNav a {
 	color: #666;
@@ -27,13 +27,13 @@
 	float: left;
 }
 #sNav ul {
-	border-left: 0.1em solid #999;
+	border-left: 1px solid #999;
 	display: table;
 	position: relative;
-	top: 0.1em;
+	top: 1px;
 	zoom:1;
 }
 #sNav {
-	border-bottom: 0.1em solid #999;
+	border-bottom: 1px solid #999;
 }
 
