--- a/arce.css
+++ b/arce.css
@@ -1,4 +1,4 @@
-/*============= [base.css] ===============*/
+/*============= [base file.css] ===============*/
 @import "base/reset.css" ;
 @import "base/typography.css" ;
 @import "base/color.css" ;
